finished and only kind of ugyl

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,1 +1,5 @@
-<%= @answer %>
+<div id="answer">
+<%= params[:question] %><br>
+<%= @answer %><br>
+<%= link_to "Ask another question?", ask_path, class: "btn btn-danger" %>
+</div>
