--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,6 @@
 <form action="/answer" method="get">
   <input type="text" name="question">
-  <input type="submit" value="Ask!">
+  <input type="submit" value="Ask!" class="btn btn-primary">
 </form>
+
+
